Improvements (ProxyWindow, Surround, LegitHelper, BreadCrumbs, etc.)